# ==============================================================================
# Python Project Configuration - Single Source of Truth
# ==============================================================================

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Your Name", email = "your.email@example.com"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "ruff>=0.6",
    "mypy>=1.11",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-xdist>=3.6",
    "coverage[toml]>=7.0",
    "bandit[toml]>=1.7",
    "safety>=3.0",
    "pip-audit>=2.7",
]

# ==============================================================================
# Black - Uncompromising Code Formatter
# ==============================================================================
[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.ruff_cache
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

# ==============================================================================
# isort - Import Sorter
# ==============================================================================
[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
extend_skip_glob = ["venv/*", ".venv/*", "build/*", "dist/*"]

# ==============================================================================
# Ruff - Fast Python Linter (Replaces Flake8, isort checks, and more)
# ==============================================================================
[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "DTZ",   # flake8-datetimez
    "T10",   # flake8-debugger
    "EM",    # flake8-errmsg
    "ISC",   # flake8-implicit-str-concat
    "ICN",   # flake8-import-conventions
    "PIE",   # flake8-pie
    "PT",    # flake8-pytest-style
    "Q",     # flake8-quotes
    "RSE",   # flake8-raise
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line-too-long (handled by formatter)
    "PLR0913", # too-many-arguments
    "PLR2004", # magic-value-comparison
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/**/*.py" = [
    "S101",   # assert-used
    "PLR2004", # magic-value-comparison
    "S105",   # hardcoded-password-string
]

[tool.ruff.lint.isort]
known-first-party = ["your_project_name"]

[tool.ruff.lint.pylint]
max-args = 6

# ==============================================================================
# mypy - Static Type Checker
# ==============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
pretty = true

exclude = [
    '^\.venv/',
    '^venv/',
    '^build/',
    '^dist/',
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

# ==============================================================================
# Bandit - Security Linter
# ==============================================================================
[tool.bandit]
exclude_dirs = [
    ".venv",
    "venv",
    "tests",
    "test",
    "build",
    "dist",
]

# Production-tuned skip list
skips = [
    "B101",  # assert_used
    "B601",  # paramiko_calls
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*/tests/*"]

# ==============================================================================
# pytest - Testing Framework
# ==============================================================================
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests",
    "unit: unit tests",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

# ==============================================================================
# Coverage - Code Coverage Measurement
# ==============================================================================
[tool.coverage.run]
source = ["."]
omit = [
    "*/venv/*",
    "*/.venv/*",
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/build/*",
    "*/dist/*",
    "*/.pytest_cache/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
    "@abc.abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"